Feature: namespace query api
