# routes/namespace/init.go
@@ -4,12 +4,12 @@ import "github.com/gin-gonic/gin"
 
 func InitRouter(router *gin.RouterGroup) {
 	grouper := router.Group("/namespace")
-	// TODO 获取命名空间信息
-	// grouper.GET("/", CreateNamespace)
-	// TODO 创建命名空间
+	// 获取命名空间信息
+	grouper.GET("/", QueryNamespace)
+	// 创建命名空间
 	grouper.POST("/", CreateNamespace)
-	// TODO 修改命名空间
+	// 修改命名空间
 	grouper.PATCH("/:id", UpdateNamespace)
-	// TODO 删除命名空间
+	// 删除命名空间
 	grouper.DELETE("/:id", DeleteNamespace)
 }
