# routes/namespace/update.go
@@ -5,6 +5,7 @@ import (
 	"github.com/goools/tools/ginx/httpx"
 	"github.com/sirupsen/logrus"
 	"github.com/siskinc/longquan-engine/constants/error_code"
+	namespaceModel "github.com/siskinc/longquan-engine/models/namespace"
 	namespaceService "github.com/siskinc/longquan-engine/service/namespace"
 )
 
@@ -16,7 +17,7 @@ import (
 // @Produce json
 // @Param id path string true "命名空间id" minlength(1)
 // @Param message body namespaceService.UpdateOneReq true "命名空间更新信息"
-// @Success 200 {object} httpx.JSONResult
+// @Success 200 {object} httpx.JSONResult.{data=namespaceModel.Namespace}
 // @Router /namespace/{id} [patch]
 func UpdateNamespace(c *gin.Context) {
 	namespaceId := c.Param("id")
@@ -28,7 +29,8 @@ func UpdateNamespace(c *gin.Context) {
 		return
 	}
 	service := namespaceService.NewService()
-	namespaceObj, err := service.UpdateOne(namespaceId, req)
+	var namespaceObj *namespaceModel.Namespace
+	namespaceObj, err = service.UpdateOne(namespaceId, req)
 	if err != nil {
 		httpx.SetRespErr(c, err)
 		return
